<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTaskActivity">

    <TextView
        android:id="@+id/textViewTaskInformation"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/stringTaskInformation"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTName"
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/stringName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskInformation" />

    <TextView
        android:id="@+id/textViewD"
        android:layout_width="87dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/stringDate"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTName" />

    <TextView
        android:id="@+id/textViewPrior"
        android:layout_width="86dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/stringPriority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewD" />

    <TextView
        android:id="@+id/textViewTaskName"
        android:layout_width="184dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/textViewTName"
        app:layout_constraintTop_toTopOf="@+id/textViewTName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="179dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toEndOf="@+id/textViewD"
        app:layout_constraintTop_toTopOf="@+id/textViewD"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewPriorityInfo"
        android:layout_width="107dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toEndOf="@+id/textViewPrior"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <Button
        android:id="@+id/buttonCancelDisplay"
        android:layout_width="105dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/stringCancel"
        app:layout_constraintEnd_toStartOf="@+id/textViewPriorityInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrior" />

    <Button
        android:id="@+id/buttonDeleteDisplay"
        android:layout_width="99dp"
        android:layout_height="53dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="76dp"
        android:text="@string/stringDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/buttonCancelDisplay"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriorityInfo" />
</androidx.constraintlayout.widget.ConstraintLayout>