<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textViewNumberTasks"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="28dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTaskList"
        android:layout_width="333dp"
        android:layout_height="151dp"
        android:layout_marginTop="80dp"
        android:width="6dp"
        android:background="@drawable/border"

        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textViewNumberTasks" />

    <Button
        android:id="@+id/buttonViewTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/stringButtonViewTasks"
        app:backgroundTint="#D59B9B9B"
        app:cornerRadius="@dimen/buttonRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskList" />

    <Button
        android:id="@+id/buttonCreateTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/stringButtonCreateTask"
        app:backgroundTint="#CD939393"
        app:cornerRadius="@dimen/buttonRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewTask" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:text="@string/UpcomingTasks"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textViewTaskList"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="@+id/textViewTaskList"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumberTasks" />

    <TextView
        android:id="@+id/textViewTaskNameMain"
        android:layout_width="150dp"
        android:layout_height="30dp"

        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewDateMain"
        android:layout_width="104dp"
        android:layout_height="32dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskNameMain" />

    <TextView
        android:id="@+id/textViewPriorityMain"
        android:layout_width="85dp"
        android:layout_height="36dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewTaskList" />

</androidx.constraintlayout.widget.ConstraintLayout>